feat: enhance struct parsing to support multiple consecutive struct declarations